--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="homelast">
                 <p>Our goal is to turn your ideas into powerful digital experiences that attract, engage, and
                     convert.<br>
-                    Whether it’s building a modern, responsive website, designing a user-friendly app<br>or crafting a
+                    Whether it's building a modern, responsive website, designing a user-friendly app<br>or crafting a
                     brand identity that stands out — we deliver innovation with quality.
                 </p>
             </div>
@@ -53,31 +53,34 @@
                     <h4>designing,development,product</h4>
                 </div>
                 <div class="fleftelm">
-                    <h3>Riyadh</h3>
-                    <h1>Official website of riyadh,saudi arabia's capital.</h1>
+                    <h3>Kelvin Zero</h3>
+                    <h1>A digital product
+                        for passwordless authentication.</h1>
                     <h4>designing,development,product</h4>
                 </div>
                 <div class="fleftelm">
-                    <h3>Riyadh</h3>
-                    <h1>Official website of riyadh,saudi arabia's capital.</h1>
+                    <h3>Qvino</h3>
+                    <h1>Wine marketplace
+                        with interactive
+                        learning.</h1>
                     <h4>designing,development,product</h4>
                 </div>
                 <div class="fleftelm last">
-                    <h3>Riyadh</h3>
-                    <h1>Official website of riyadh,saudi arabia's capital.</h1>
+                    <h3>RiyadhGenesis Vision</h3>
+                    <h1>Private trust management and trading platform.</h1>
                     <h4>designing,development,product</h4>
                 </div>
             </div>
             <div id="fright">
                 <div class="images">
-                     <img src="https://images.unsplash.com/photo-1692343814412-cbe23ff32765?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=767&q=80"
-                            alt="">
-                        <img src="https://images.unsplash.com/photo-1609428079875-ae186c562aff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=689&q=80"
-                            alt="">
-                        <img src="https://images.unsplash.com/photo-1614633833026-0820552978b6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80"
-                            alt="">
-                        <img src="https://images.unsplash.com/photo-1598133894008-61f7fdb8cc3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80"
-                            alt="">
+                    <img src="https://images.unsplash.com/photo-1692343814412-cbe23ff32765?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=767&q=80"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1609428079875-ae186c562aff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=689&q=80"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1614633833026-0820552978b6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1598133894008-61f7fdb8cc3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80"
+                        alt="">
 
                 </div>
             </div>
