--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div id="featured">
-            <div class="fheading">
+            <div class="fheading magnet">
                 <h1>featured</h1>
                 <h1>projects</h1>
             </div>
