--- a/index.html
+++ b/index.html
@@ -124,6 +124,53 @@
         <div class="btndiv">
             <button class="magnet">view all resources</button>
         </div>
+        <footer id="footer">
+            <div class="footer-container">
+
+                <div class="footer-left">
+                    <h2>Cuberto</h2>
+                    <p>We craft websites, apps, and branding with creativity & precision.</p>
+
+                    <div class="social-links">
+                        <a href="#"><i class="ri-instagram-line"></i></a>
+                        <a href="#"><i class="ri-twitter-x-line"></i></a>
+                        <a href="#"><i class="ri-linkedin-fill"></i></a>
+                        <a href="#"><i class="ri-dribbble-line"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-right">
+                    <div class="footer-col">
+                        <h3>Services</h3>
+                        <a href="#">Web Design</a>
+                        <a href="#">App Development</a>
+                        <a href="#">Brand Identity</a>
+                        <a href="#">Product Strategy</a>
+                    </div>
+
+                    <div class="footer-col">
+                        <h3>Company</h3>
+                        <a href="#">About</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contact</a>
+                    </div>
+
+                    <div class="footer-col">
+                        <h3>Resources</h3>
+                        <a href="#">Tutorials</a>
+                        <a href="#">Case Studies</a>
+                        <a href="#">Guides</a>
+                        <a href="#">Documentation</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>© 2025 Cuberto — All rights reserved.</p>
+            </div>
+        </footer>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
